@@ -98,6 +98,7 @@ Views 6.x-3.x-dev
     o #662174: handlers with an 'extra form' or other option data that was not in the main form could lose that data.
     o #571548 by dagmar: Prevent aliases longer than 63 characters which pgsql cannot handle.
     o #694980 by dereine: New views should default to limiting to 10 items, to copy previous behavior.
+    o #705668 by dereine: Fix glossary view, add tests for glossary view.
 
 Views 6.x-3.0-alpha1
   Bugs fixed
